Changes in the background of the <body> element

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
+<body style="background-color: blue;">
 <table cellspacing="5">
   <tr>
     <td><img src="img/jhon-modified.png" height="240" alt="Jhonatans profile picture"></td>
