Changes in the background of the <body> element --Added style to the pages with css main file

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
+
   <meta name="theme-color" content="#fafafa">
+
 </head>
 
-<body style="background-color: blue;">
+<body>
 <table cellspacing="5">
   <tr>
     <td><img src="img/jhon-modified.png" height="240" alt="Jhonatans profile picture"></td>
