--- a/contact-me.html
+++ b/contact-me.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Contact me</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <form action="mailto:jagvortex@gmail.com" method="post" enctype="text/plain">
